--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": " next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "PORT = 3002 next start"
   },
   "dependencies": {
     "next": "10.2.0",
