--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "PORT = 3002 next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
